로그인 화면 디자인 적용

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           font-variant-ligatures: common-ligatures;
           -moz-osx-font-smoothing: grayscale;
           -webkit-font-smoothing: antialiased;
+
+          background-color: #F0F4FA;
       }
       * {
           box-sizing: border-box;
